# Real_Estate_Intelligence_Platform_for_Prime-Lands

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  faqs.yaml  models.yaml
notebooks/: 01_crawl_primelands.ipynb  02_chunk_and_embed.ipynb  03_chat_with_web_demo.ipynb
src/: config.py
src/application/: __init__.py
src/application/chat_service/: __init__.py  cag_cache.py  cag_service.py  crag_service.py  rag_service.py
src/application/ingest_document_service/: __init__.py  chunkers.py  web_crawler.py
src/domain/: __init__.py  models.py  utils.py
src/domain/prompts/: __init__.py  rag_templates.py
src/infra/llm_providers/: __init__.py  embeddings.py  llm_services.py
