[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prime_lands-intelligence-platform"
version = "0.1.0"
description = "Intelligent AI Platform for Prime Lands"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Thilanka" }
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "context-engineering",
    "llm",
    "ai",
    "langchain",
    "embeddings",
    "vector-search"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

dependencies = [
    # Core LLM and Embedding Services
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "cohere>=4.47",
    
    # LangChain Ecosystem (Primary RAG Framework)
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain-text-splitters>=0.2.0",
    "langchain-qdrant>=0.0.9",
    
    # Web Crawling and Content Extraction
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "lxml>=5.1.0",
    "nest-asyncio>=1.5.0",
    
    # Vector Store and Semantic Search
    "chromadb>=0.4.22",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.3.1",
    
    # Text Processing and Tokenization
    "tiktoken>=0.5.2",
    "nltk>=3.8.1",
    "spacy>=3.7.0",
    
    # Configuration and Environment
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Utilities and Helper Libraries
    "tqdm>=4.66.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.1",
    "notebook>=7.0.0",
]

dev = [
    "black>=24.1.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]

all = [
    "context-engineering[jupyter,dev]",
]

[project.urls]
Homepage = "https://github.com/thilankadw/Real_Estate_Intelligence_Platform_for_Prime-Lands"
Documentation = "https://github.com/thilankadw/Real_Estate_Intelligence_Platform_for_Prime-Lands#readme"
Repository = "https://github.com/thilankadw/Real_Estate_Intelligence_Platform_for_Prime-Lands"
Issues = "https://github.com/thilankadw/Real_Estate_Intelligence_Platform_for_Prime-Lands/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.txt"]

# ========================================
# Black - Code Formatter
# ========================================
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# ========================================
# Ruff - Fast Python Linter
# ========================================
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are fine
"tests/*" = ["ARG"]       # unused arguments in tests are fine

[tool.ruff.lint.isort]
known-first-party = ["context_engineering"]

# ========================================
# MyPy - Static Type Checking
# ========================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_community.*",
    "langchain_openai.*",
    "sentence_transformers.*",
    "playwright.*",
    "bs4.*",
    "markdownify.*",
]
ignore_missing_imports = true

# ========================================
# Pytest - Testing Framework
# ========================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ========================================
# Coverage - Code Coverage
# ========================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
precision = 2
